force-app/main/default/objects/FOT_API__mdt/FOT_API__mdt.object-meta.xml
<CustomObject>
    <description>FOT_API</description>
    <label>FOT_API</label>
    <pluralLabel>FOT_APIs</pluralLabel>
</CustomObject>