force-app/main/default/objects/FOT_API__mdt/fields/api_key__c.field-meta.xml
<CustomField>
    <fullName>api_key__c</fullName>
    <description>API Key</description>
    <label>API Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>