force-app/main/default/objects/FOT_API__mdt/fields/Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Type__c</fullName>
    <description>Content-Type</description>
    <label>Content-Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>