force-app/main/default/objects/FOT_API__mdt/fields/End_Point__c.field-meta.xml
<CustomField>
    <fullName>End_Point__c</fullName>
    <description>End Point</description>
    <label>End Point</label>
    <type>Url</type>
</CustomField>